--- a/.github/workflows/sky.yml
+++ b/.github/workflows/sky.yml
@@ -19,16 +19,20 @@ jobs:
       - name: Cypress install
         uses: cypress-io/github-action@v4
         with:
+          command-prefix: 'percy exec -- npx'
           runTests: false
       - run: npm install
 
       - name: "UI Tests - Chrome"
         uses: cypress-io/github-action@v4
         with:
+          command-prefix: 'percy exec -- npx'
           start: npm start
           wait-on: "http://localhost:8081"
           wait-on-timeout: 120
           browser: chrome
           spec: cypress/e2e/isolation/*
+          PERCY_TOKEN: ${{ secrets.PERCY_TOKEN }}
+
 
   
