--- a/cypress/tsconfig.json
+++ b/cypress/tsconfig.json
@@ -12,8 +12,10 @@
             "dom"
         ],
         "types": [
-            "cypress"
-        ]
+            "cypress",
+             "@percy/cypress"
+        ]    
+        
     },
     "include": [
         "**/*.js",
